<resources>
    <string name="app_name">Phonebook</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_contact">Add contact</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="edit_contact">Edit contact</string>
    <string name="edit">Edit</string>
    <string name="Contact_is_updated">Contact is updated</string>
    <string name="label_date">date:</string>
    <string name="label_duration">duration:</string>
    <string name="create_group">Create Group</string>
</resources>
